# PICM

./: .gitignore  CMakeLists.txt  Makefile  README.md  first.json  taylorgreen.json  test-2.json  test-uniform.json  test.json
results/: simulation.pvd  wave_0000.vti  wave_0001.vti  wave_0002.vti  wave_0003.vti  wave_0004.vti  wave_0005.vti  wave_0006.vti  wave_0007.vti  wave_0008.vti  wave_0009.vti
src/: CMakeLists.txt  main.cpp
src/core/: Fields.cpp  Fields.hpp  Grid2D.cpp  Grid2D.hpp  OutputWriter.cpp  OutputWriter.hpp  Parameters.cpp  Parameters.hpp  Precision.hpp  SceneObjects.cpp  SceneObjects.hpp  main.cpp  project.cpp  project.hpp  utilities.cpp  utilities.hpp
src/solvers/SemiLagrangian/: Advect.cpp  IterativeMethods.cpp  Project.cpp  SemiLagrangian.cpp  SemiLagrangian.hpp
test/: huge-cylinder.json  taylorgreen.json  test-dbg.json  test-large-cylinder.json  test-source.json  test-square.json  test-uniform.json  test.json
